more to homepage

--- a/guide.html
+++ b/guide.html
@@ -66,6 +66,9 @@
         <img src="assets/aftermovechanges.gif" style="max-width: 100%; height: auto;"/>
       </div>
     </div>
+    <h2>12. Add a Camera</h2>
+    <p>To make the camera follow the player, you need to add a camera. Add a Camera2D node under Player.</p>
+    <img src="assets/addcamera.gif">
     <h2>11. Run the code</h2>
     <p>Click ctrl+b or use the play button in the top right to start the program. Set the default scene to main. Congrats!! You now have a platformer game!</p>
     <img src="assets/runprogram.gif">
