--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <p>a Hack Club YSWS</p>
     <h2>Build a platformer in Godot in one week</h2>
     <h2>Earn stickers and other prizes</h2>
-    <button onclick="window.location.href='guide.html'">GET STARTED</button>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 20L24 32L36 20" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
@@ -26,7 +25,7 @@
     <div class="step-container">
       <div class="step-content">
         <h3>1. Create a Platformer Game using Godot</h3>
-        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 3 hours on your game and tracking your time using <a href="https://hackatime.hackclub.com/" target="_blank">Hackatime</a>. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project. </p>
+        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 1 hour on your game and tracking your time using <a href="https://hackatime.hackclub.com/" target="_blank">Hackatime</a>. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
       </div>
       <div class="step-image">
         <img src="assets/godot.png"/>
@@ -34,20 +33,20 @@
       <button onclick="window.location.href='guide.html'">GUIDE</button>
     </div>
     <h3>2. Make Your Game Unique</h3>
-    <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better!</p>
+    <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below!</p>
     <div class="step-container-reverse">
       <div class="step-image">
         <img src="assets/itchio.png"/>
       </div>
       <div class="step-content">
         <h3>3. Publish your Project to Itch.io</h3>
-        <p><a href="https://itch.io/" taraget="_blank">Itch.io</a> is a website for people to share and play video games. Make an account, export your game, and publish it to the world. </p>
+        <p><a href="https://itch.io/" taraget="_blank">Itch.io</a> is a website for people to share and play video games. Make an account, export your game, and publish it to the world. Use <a href="https://www.youtube.com/watch?v=9-lBiLMWynE" target="_blank">this</a> video to help you.</p>
       </div>
     </div>
     <h3>4. Ship your Project and Share it</h3>
     <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
     <h3>5. Earn Prizes! CONGRATS!</h3>
-    <p>You will get stickers, Artifacts and other prizes </p>
+    <p>You will get stickers and Artifacts! Congratulations! </p>
   </section>
 
   <section id="end">
