--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="step-container">
       <div class="step-content">
         <h3>1. Create a Platformer Game using Godot</h3>
-        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 1 hour on your game and tracking your time using <a href="https://hackatime.hackclub.com/" target="_blank">Hackatime</a>. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
+        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 1 hour on your game. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
       </div>
       <div class="step-image">
         <img src="assets/godot.png"/>
