--- a/index.html
+++ b/index.html
@@ -33,7 +33,33 @@
       <button onclick="window.location.href='guide.html'">GUIDE</button>
     </div>
     <h3>2. Make Your Game Unique</h3>
-    <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below!</p>
+    <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below! You can add your own story, background, and more.</p>
+    <div class="gallery-scroll">
+      <div class="gallery-card">
+        <img src="assets/signallostdemo.gif">
+        <h3>Signal Lost</h3>
+        <p>A space platformer with gravity changing and dangerous plants.</p>
+        <p>Made by Estella Gu, you can play it at <a href="https://themagicfrog.itch.io/signal-lost" target="_blank">here</a>!</p>
+      </div>
+      <div class="gallery-card">
+        <img src="assets/cocytusdemo.gif">
+        <h3>Cocytus</h3>
+        <p>A cave platformer where you move with your mouse.</p>
+        <p>Made by Sarah Ngai, you can play it at <a href="https://idksarah.itch.io/cocytus" target="_blank">here</a>!</p>
+      </div>
+      <div class="gallery-card">
+        <img src="assets/echoesdemo.gif">
+        <h3>Echoes</h3>
+        <p>An adventure platformer where you move with a lantern.</p>
+        <p>Made by Olive Wu, you can play it at <a href="https://enterprisegoose.itch.io/echos" target="_blank">here</a>!</p>
+      </div>
+      <div class="gallery-card">
+        <img src="assets/platformlandsdemo.gif">
+        <h3>PlatformLand</h3>
+        <p>A land platformer where you explore ancient ruins and avoid dangerous biomes.</p>
+        <p>Made by Julia Nadolska, you can play it at <a href="https://supertik.itch.io/platformlands" target="_blank">here</a>!</p>
+      </div>
+    </div>
     <div class="step-container-reverse">
       <div class="step-image">
         <img src="assets/itchio.png"/>
