--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 1 hour on your game. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
       </div>
       <div class="step-image">
-        <img src="assets/godot.png"/>
+        <img src="assets/godot.png" class="godot-logo"/>
       </div>
       <button onclick="window.location.href='guide.html'">GUIDE</button>
     </div>
@@ -62,7 +62,7 @@
     </div>
     <div class="step-container-reverse">
       <div class="step-image">
-        <img src="assets/itchio.png"/>
+        <img src="assets/itchio.png" class="itchio-logo"/>
       </div>
       <div class="step-content">
         <h3>3. Publish your Project to Itch.io</h3>
