--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
     <h3>5. Earn Prizes! CONGRATS!</h3>
     <p>You will get stickers and Artifacts! Congratulations! </p>
+    <img src="assets/partyorpheus.png" class="rounded-glow" style="display: block; margin: 2em auto 0 auto;" />
   </section>
 
   <section id="end">
@@ -82,13 +83,5 @@
   </section>
 
   <script src="script.js"></script>
-  <script>
-  function scrollToInfo() {
-    const info = document.getElementById('info');
-    if (info) {
-      info.scrollIntoView({ behavior: 'smooth' });
-    }
-  }
-  </script>
 </body>
 </html>
