--- a/guide.html
+++ b/guide.html
@@ -24,6 +24,11 @@
     <img src="assets/godotdownload.gif"/>
     <p>Click the Create New Project Button, and name your platformer. Then create a new folder that will have all your future Godot games. Use the Mobile renderer. Finally, click Create at the bottom.</p>
     <img src="assets/makeproject.gif"/>
+    <h2>1. Add Collectibles</h2>
+    <p>Learn how to add collectible items to your platformer game that the player can pick up for points or power-ups.</p>
+    <div style="position: relative; width: 100%; max-width: 800px; margin: 20px auto;">
+      <iframe width="100%" height="450" src="https://www.youtube.com/embed/Rh_8UXjYTn4" title="Add Collectibles Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <h2>2. Create Your Scene</h2>
     <p>In Scene section in the top left, you will see the options to create a root node, which is the starting point for your section. All the other components will be in the main Node. Godot can be used to make 2D games and 3D games. Choose Other Node and select Node. </p>
     <img src="assets/makingscene.gif"/>
@@ -72,7 +77,7 @@
       </div>
     </div>
     <h2>12. Add a Camera</h2>
-    <p>To make the camera follow the player, you need to add a camera. Add a Camera2D node under Player.</p>
+    <p>To make the camera follow the player, you need to add a camera. Add a Camera2D node under Player. You need to make sure it is centered around the player, so switch to 2D view in the top and drag the camera's center to the player. Finally, you can add a little bit of camera lag for a cool effect by going to the Inspector, and under Position Smoothing, enable it and set to the speed to around 7. The lower the speed, the more camera lag there is.</p>
     <img src="assets/addcamera.gif">
     <h2>13. Run the code</h2>
     <p>Click ctrl+b or use the play button in the top right to start the program. Set the default scene to main. Congrats!! You now have a platformer game!</p>
@@ -80,7 +85,8 @@
   </section>
 
   <section id="end">
-    <button onclick="window.location.href='next.html'">WHAT'S NEXT</button>
+    <h1>WHAT'S NEXT?</h1>
+    <button onclick="window.location.href='next.html'" style="font-size: 40px; padding: 20px 40px; margin: 20px 0 80px 0;">CONTINUE BUILDING!!</button>
   </section>
 
   <script src="script.js"></script>
