--- a/submit.html
+++ b/submit.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>SUBMIT YOUR PROJECT</h1>
-    <p>Learn how to publish your game on itch.io</p>
+    <h2>Publish your game on itch.io!</h2>
   </header>
   <section id="info">
     <h2>How to Get Your Game on itch.io</h2>
@@ -32,9 +32,8 @@
   </section>
 
   <section id="end">
-    <h1>SHARE YOUR GAME!</h1>
-    <p>Get your platformer out there and earn the prizes!</p>
-    <button onclick="window.location.href='index.html'">BACK TO HOME</button>
+    <h1>SUBMIT YOUR PROJECT!</h1>
+    <button onclick="window.location.href='https://forms.hackclub.com/t/td4Ak1ENrCus'">GAME SUBMISSION FORM</button>
   </section>
 
   <script src="script.js"></script>
