footer and tutorials

--- a/guide.html
+++ b/guide.html
@@ -89,6 +89,10 @@
     <button onclick="window.location.href='next.html'" style="font-size: 40px; padding: 20px 40px; margin: 20px 0 80px 0;">CONTINUE BUILDING!!</button>
   </section>
 
+  <footer>
+    <p>© Made with 💖 by Estella Gu</p>
+  </footer>
+
   <script src="script.js"></script>
   <script>
     function scrollToInfo() {
