--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
       <div class="step-image">
         <img src="assets/godot.png" class="godot-logo"/>
       </div>
-      <button onclick="window.location.href='guide.html'">GUIDE</button>
+      <button onclick="window.location.href='guide.html'">GODOT GUIDE</button>
     </div>
     <h3>2. Make Your Game Unique</h3>
-    <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below! You can add your own story, background, and more.</p>
+    <div class="step-container">
+      <div class="step-content">
+        <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below! You can add your own story, background, and more.</p>
+      </div>
+      <button onclick="window.location.href='next.html'">MORE IDEAS</button>
+    </div>
     <div class="gallery-scroll">
       <div class="gallery-card">
         <img src="assets/signallostdemo.gif">
@@ -68,9 +73,15 @@
         <h3>3. Publish your Project to Itch.io</h3>
         <p><a href="https://itch.io/" taraget="_blank">Itch.io</a> is a website for people to share and play video games. Make an account, export your game, and publish it to the world. Use <a href="https://www.youtube.com/watch?v=9-lBiLMWynE" target="_blank">this</a> video to help you.</p>
       </div>
+      <button onclick="window.location.href='submit.html'">ITCH.IO GUIDE</button>
     </div>
-    <h3>4. Ship your Project and Share it</h3>
-    <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
+    <div class="step-container">
+      <div class="step-content">
+        <h3>4. Ship your Project and Share it</h3>
+        <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
+      </div>
+      <button onclick="window.open('https://forms.hackclub.com/t/td4Ak1ENrCus', '_blank')">SUBMISSION FORM</button>
+    </div>
     <h3>5. Earn Prizes! CONGRATS!</h3>
     <p>You will get stickers and Artifacts! Congratulations! </p>
     <img src="assets/partyorpheus.png" class="rounded-glow" style="display: block; margin: 2em auto 0 auto;" />
@@ -81,6 +92,10 @@
     <p>Build a Godot platformer, earn stickers and other prizes!</p>
     <button onclick="window.location.href='guide.html'">GET STARTED</button>
   </section>
+
+  <footer>
+    <p>© Made with 💖 by Estella Gu</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
