--- a/next.html
+++ b/next.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="short-header">
     <h1>WHAT'S NEXT?</h1>
   </header>
   <section id="info">
     <h2>More Features to Add</h2>
 
-    <p>Now it's time to customize your game and make it unique! Choose a character, animal, or anything else for your player to be. You can also add a background, or cool tileset. Ther are endless possibilities! There are some ideas listed below along with some great tutorials and videos to help you.</p>
+    <p>Now it's time to customize your game and make it unique! Choose a character, animal, or anything else for your player to be. You can also add a background, or cool tileset. Ther are endless possibilities and many tutorials and help you can get in the #jumpstart channel! There are some ideas listed below along with some great tutorials and videos to help you.</p>
 
     <h3>1. Add Collectibles</h3>
     <p>Create coins, gems, or power-ups that the player can collect. Use Area2D nodes and signals to detect when the player touches them. You can watch <a href="youtube.com/watch?v=Rh_8UXjYTn4" target="_blank">this</a> video</a> to help you.</p>
@@ -46,6 +46,9 @@
     <button onclick="window.location.href='https://forms.hackclub.com/t/td4Ak1ENrCus'">GAME SUBMISSION FORM</button>
   </section>
 
+  <footer>
+    <p>© Made with 💖 by Estella Gu</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
