--- a/submit.html
+++ b/submit.html
@@ -36,6 +36,10 @@
     <button onclick="window.location.href='https://forms.hackclub.com/t/td4Ak1ENrCus'">GAME SUBMISSION FORM</button>
   </section>
 
+  <footer>
+    <p>© Made with 💖 by Estella Gu</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html> 
