fix video thing

--- a/guide.html
+++ b/guide.html
@@ -24,11 +24,7 @@
     <img src="assets/godotdownload.gif"/>
     <p>Click the Create New Project Button, and name your platformer. Then create a new folder that will have all your future Godot games. Use the Mobile renderer. Finally, click Create at the bottom.</p>
     <img src="assets/makeproject.gif"/>
-    <h2>1. Add Collectibles</h2>
-    <p>Learn how to add collectible items to your platformer game that the player can pick up for points or power-ups.</p>
-    <div style="position: relative; width: 100%; max-width: 800px; margin: 20px auto;">
-      <iframe width="100%" height="450" src="https://www.youtube.com/embed/Rh_8UXjYTn4" title="Add Collectibles Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    <p>Also, make sure you setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video because you will need it to submit your project!</p>
     <h2>2. Create Your Scene</h2>
     <p>In Scene section in the top left, you will see the options to create a root node, which is the starting point for your section. All the other components will be in the main Node. Godot can be used to make 2D games and 3D games. Choose Other Node and select Node. </p>
     <img src="assets/makingscene.gif"/>
