--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header>
     <img src="assets/jumpstart_title.gif" class="title-animation">
     <p>a Hack Club YSWS</p>
-    <h2>Build a platformer in Godot in one week</h2>
-    <h2>Earn stickers and other prizes</h2>
+    <h2>Build a platformer in Godot in one week from June 25th to July 2st</h2>
+    <h2>Earn stickers and other prizes!!</h2>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 20L24 32L36 20" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
