--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <img src="assets/jumpstart_title.gif" class="title-animation">
     <p>a Hack Club YSWS</p>
-    <h2>Build a platformer in Godot in one week from June 25th to July 2st</h2>
+    <h2>Build a platformer in Godot in one week from June 26th to July 2nd</h2>
     <h2>Earn stickers and other prizes!!</h2>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +80,7 @@
         <h3>4. Ship your Project and Share it</h3>
         <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
       </div>
-      <button onclick="window.open('https://forms.hackclub.com/t/td4Ak1ENrCus', '_blank')">SUBMISSION FORM</button>
+      <button onclick="window.open('https://forms.hackclub.com/jumpstart', '_blank')">SUBMISSION FORM</button>
     </div>
     <h3>5. Earn Prizes! CONGRATS!</h3>
     <p>You will get stickers and Artifacts! Congratulations! </p>
