--- a/guide.html
+++ b/guide.html
@@ -24,7 +24,18 @@
     <img src="assets/godotdownload.gif"/>
     <p>Click the Create New Project Button, and name your platformer. Then create a new folder that will have all your future Godot games. Use the Mobile renderer. Finally, click Create at the bottom.</p>
     <img src="assets/makeproject.gif"/>
-    <p>Also, make sure you setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video because you will need it to submit your project!</p>
+    <p>Also, make sure you setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using the video below! You'll need it to submit your project.</p>
+    <div style="text-align: center; margin: 2em 0;">
+      <iframe 
+        width="800" 
+        height="450" 
+        src="https://www.youtube.com/embed/dKqOTx06_Cw" 
+        title="How do get your Godot Game on Github" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+      </iframe>
+    </div>
     <h2>2. Create Your Scene</h2>
     <p>In Scene section in the top left, you will see the options to create a root node, which is the starting point for your section. All the other components will be in the main Node. Godot can be used to make 2D games and 3D games. Choose Other Node and select Node. </p>
     <img src="assets/makingscene.gif"/>
