--- a/next.html
+++ b/next.html
@@ -11,6 +11,8 @@
 <body>
   <header class="short-header">
     <h1>WHAT'S NEXT?</h1>
+    <p>Customize your game and make it your own!</p>
+    <img src="assets/platformlandsdemo.gif">
   </header>
   <section id="info">
     <h2>More Features to Add</h2>
@@ -32,12 +34,12 @@
     <h3>5. Create a Menu System</h3>
     <p>Build a main menu with options to start the game, view controls, and access settings. Use Control nodes for UI elements. Here is a great <a href="https://www.youtube.com/watch?v=dTL6Cpk5hY4" target="_blank">video</a> to help you.</p>
     
-    <h3>6. Anything else you can think of!!</h3>
+    <h3>6. Anything else you can think of!! Remember, if you need help, you can always ask in the #jumpstart channel or DM me (<a href="https://hackclub.slack.com/team/U06UYA4AH6F" target="_blank">@magic frog</a>)!</h3>
   </section>
 
   <section id="end">
     <h1>SUBMIT YOUR PROJECT!</h1>
-    <button onclick="window.location.href='https://forms.hackclub.com/t/td4Ak1ENrCus'">GAME SUBMISSION FORM</button>
+    <button onclick="window.location.href='submit.html'">SUBMISSION INSTRUCTIONS</button>
   </section>
 
   <footer>
