--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </div>
       <button onclick="window.location.href='guide.html'">GODOT GUIDE</button>
     </div>
-    <h3>2. Make Your Game Unique</h3>
     <div class="step-container">
       <div class="step-content">
+        <h3>2. Make Your Game Unique</h3>
         <p>Create a backstory or choose a theme or style for your platformer. Then, keep adding on to your game and adding new features to make it better! Look at the some of the other platformer games made by Hack Clubbers with Godot below! You can add your own story, background, and more.</p>
       </div>
       <button onclick="window.location.href='next.html'">MORE IDEAS</button>
@@ -82,9 +82,13 @@
       </div>
       <button onclick="window.open('https://forms.hackclub.com/jumpstart', '_blank')">SUBMISSION FORM</button>
     </div>
-    <h3>5. Earn Prizes! CONGRATS!</h3>
-    <p>You will get stickers and Artifacts! Congratulations! </p>
-    <img src="assets/partyorpheus.png" class="rounded-glow" style="display: block; margin: 2em auto 0 auto;" />
+    <div class="step-container">
+      <div class="step-content">
+        <h3>5. Earn Prizes! CONGRATS!</h3>
+        <p>You will get stickers and Artifacts! Congratulations! </p>
+        <img src="assets/partyorpheus.png" class="rounded-glow" style="display: block; margin: 2em auto 2em auto;" />
+      </div>
+    </div>
   </section>
 
   <section id="end">
