--- a/submit.html
+++ b/submit.html
@@ -12,6 +12,12 @@
   <header>
     <h1>SUBMIT YOUR PROJECT</h1>
     <h2>Publish your game on itch.io!</h2>
+    <img src="assets/itchiodemo.gif" style="padding: 2em 0;">
+    <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
+      <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 20L24 32L36 20" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </div>
   </header>
   <section id="info">
     <h2>How to Get Your Game on itch.io</h2>
@@ -32,14 +38,26 @@
   </section>
 
   <section id="end">
+    <h1>CONGRATS! IT'S TIME TO</h1>
     <h1>SUBMIT YOUR PROJECT!</h1>
-    <button onclick="window.location.href='https://forms.hackclub.com/t/td4Ak1ENrCus'">GAME SUBMISSION FORM</button>
+    <button onclick="window.location.href='https://forms.hackclub.com/jumpstart'">GAME SUBMISSION FORM</button>
+    <div style="width:100%;height:500px;" data-fillout-id="td4Ak1ENrCus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div><script src="https://server.fillout.com/embed/v1/"></script>
   </section>
+
+  
 
   <footer>
     <p>© Made with 💖 by Estella Gu</p>
   </footer>
 
   <script src="script.js"></script>
+  <script>
+    function scrollToInfo() {
+      const infoSection = document.getElementById('info');
+      if (infoSection) {
+        infoSection.scrollIntoView({ behavior: 'smooth' });
+      }
+    }
+  </script>
 </body>
 </html> 
