--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <div class="step-container">
       <div class="step-content">
         <h3>5. Earn Prizes! CONGRATS!</h3>
-        <p>You will get stickers and Artifacts! Congratulations! </p>
-        <img src="assets/partyorpheus.png" class="rounded-glow" style="display: block; margin: 2em auto 2em auto;" />
+        <p>You will get the stickers below and if you are particpating in Athena Award, also Artifacts! Congratulations! </p>
+        <img src="assets/jumpstartstickers.png" class="rounded-glow" style="display: block; margin: 2em auto 2em auto;" />
       </div>
     </div>
   </section>
