--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <img src="assets/jumpstart_title.gif" class="title-animation">
     <p>a Hack Club YSWS</p>
-    <h2>Build a platformer in Godot in one week from June 26th to July 2nd</h2>
+    <h2>Build a platformer in Godot from June 26th to July 7th</h2>
     <h2>Earn stickers and other prizes!!</h2>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
