--- a/next.html
+++ b/next.html
@@ -21,7 +21,7 @@
     <p>Now it's time to customize your game and make it unique! Choose a character, animal, or anything else for your player to be. You can also add a background, or cool tileset. Ther are endless possibilities and many tutorials and help you can get in the #jumpstart channel! There are some ideas listed below along with some great tutorials and videos to help you.</p>
 
     <h3>1. Add Collectibles</h3>
-    <p>Create coins, gems, or power-ups that the player can collect. Use Area2D nodes and signals to detect when the player touches them. You can watch <a href="youtube.com/watch?v=Rh_8UXjYTn4" target="_blank">this</a> video</a> to help you.</p>
+    <p>Create coins, gems, or power-ups that the player can collect. Use Area2D nodes and signals to detect when the player touches them. You can watch <a href="https://www.youtube.com/watch?v=Rh_8UXjYTn4" target="_blank">this</a> video</a> to help you.</p>
 
     <h3>2. Create Enemies</h3>
     <p>Add moving enemies that the player must avoid or defeat. Here is a <a href="https://www.youtube.com/watch?v=kBzV7vgdQfU" target="_blank">video</a> to help you.</p>
