--- a/submit.html
+++ b/submit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SUBMIT YOUR PROJECT</title>
+  <title>SUBMIT YOUR PROJECT (V1 SUBMISSIONS NOW CLOSED)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/j-favicon.png">
   <link rel="stylesheet" href="style.css" />
@@ -41,8 +41,7 @@
   <section id="end">
     <h1>CONGRATS! IT'S TIME TO</h1>
     <h1>SUBMIT YOUR PROJECT!</h1>
-    <button onclick="window.location.href='https://forms.hackclub.com/jumpstart'">GAME SUBMISSION FORM</button>
-    <div style="width:100%;height:500px;" data-fillout-id="td4Ak1ENrCus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div><script src="https://server.fillout.com/embed/v1/"></script>
+    <button onclick="window.location.href='https://forms.hackclub.com/jumpstart'">GAME SUBMISSION FORM (CLOSED) PLEASE SUBMIT TO V2</button>
   </section>
 
   
