--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JUMPSTART</title>
+  <title>JUMPSTART V1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/j-favicon.png">
   <link rel="stylesheet" href="style.css" />
@@ -13,9 +13,9 @@
   <header>
     <img src="assets/jumpstart_title.gif" class="title-animation">
     <p>a Hack Club YSWS</p>
-    <h2>Submissions have closed for this YSWS 😔</h2>
-    <h2>Build a platformer in Godot from June 26th to July 7th</h2>
-    <h2>Earn stickers and other prizes!!</h2>
+    <h2>Are you doing <a href="https://jumpstart.hackclub.com/" target="_blank">Jumpstart V2</a>? Use the guides and resources</h2>
+    <h2>below to get started making a platformer in Godot to submit to Jumpstart V2!</h2>
+    <p>Submissions for V1 have closed (build a platformer in Godot from June 26th to July 7th, earn stickers)</p>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 20L24 32L36 20" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
@@ -27,7 +27,7 @@
     <div class="step-container">
       <div class="step-content">
         <h3>1. Create a Platformer Game using Godot</h3>
-        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right and join workshops in Slack to create your 2D platformer. You must spend at least 1 hour on your game. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
+        <p><a href="https://godotengine.org/" target="_blank">Godot</a> is a free game engine you can use to create games! Use the guide on the right to create your 2D platformer. Also, learn to setup a <a href="https://github.com/" target="_blank">Github</a> repo for your project using <a href="https://www.youtube.com/watch?v=dKqOTx06_Cw" target="_blank">this</a> video. </p>
       </div>
       <div class="step-image">
         <img src="assets/godot.png" class="godot-logo"/>
@@ -81,14 +81,14 @@
     <div class="step-container">
       <div class="step-content">
         <h3>4. Ship your Project and Share it</h3>
-        <p>Share your amazing project in the #ship channel and the #athena-award channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
+        <p>Share your amazing project in the #ship channel and the #jumpstart channel. You can share the Itch.io link for your game with family, friends, and anyone else.</p>
       </div>
-      <button onclick="window.open('https://forms.hackclub.com/jumpstart', '_blank')">SUBMISSION FORM</button>
+      <button onclick="window.open('https://forms.hackclub.com/jumpstart', '_blank')">SUBMISSION FORM (CLOSED)</button>
     </div>
     <div class="step-container">
       <div class="step-content">
-        <h3>5. Earn Prizes! CONGRATS!</h3>
-        <p>You will get the stickers below and if you are particpating in Athena Award, also Artifacts! Congratulations! </p>
+        <h3>5. (Submissions Closed for V1, submit to <a href="https://jumpstart.hackclub.com/" target="_blank">V2</a>) Earn Prizes! CONGRATS!</h3>
+        <p>You will get the stickers below if you submit before July 7th and if you are particpating in Athena Award, also Artifacts! Congratulations! </p>
         <img src="assets/jumpstartstickers.png" class="rounded-glow" style="display: block; margin: 2em auto 2em auto;" />
       </div>
     </div>
