--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <header>
     <img src="assets/jumpstart_title.gif" class="title-animation">
     <p>a Hack Club YSWS</p>
-    <h2>Are you doing <a href="https://jumpstart.hackclub.com/" target="_blank">Jumpstart V2</a>? Use the guides and resources</h2>
-    <h2>below to get started making a platformer in Godot to submit to Jumpstart V2!</h2>
-    <p>Submissions for V1 have closed for general people (build a platformer in Godot from June 26th to July 7th, earn stickers)</p>
+    <h2>Looking for Jumpstart V2? <a href="https://jumpstart.hackclub.com/" target="_blank">Find it here</a>!</h2>
+    <h2>Looking for Jumpstart Daydream? <a href="https://daydream.jumpstart.hackclub.com/daydream" target="_blank">Find it here</a>!</h2>
+    <p>Submissions for V1 have closed</p>
+    <p>Build a platformer in Godot from June 26th to July 7th, earn stickers</p>
     <div class="scroll-arrow" onclick="scrollToInfo()" tabindex="0" aria-label="Scroll down" role="button">
       <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 20L24 32L36 20" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
